edit from master to demo 002

--- a/20170613-master.md
+++ b/20170613-master.md
@@ -1,3 +1,4 @@
-this is a new file on master
 
-2nd line from master
+
+
+master: Etiam egestas sit amet turpis rutrum tempus. Sed eu lectus sed nunc consequat laoreet ac id enim. Etiam ligula nisl, interdum vel imperdiet et, maximus at enim. Ut finibus porttitor justo sed malesuada. In sed rutrum est, ut bibendum magna. Mauris id augue mauris. Ut scelerisque felis ac velit semper iaculis. Nunc semper efficitur augue et laoreet. Curabitur scelerisque eleifend neque, quis rutrum libero sodales a.
